Bug 357345: Add more optimizations to the XPath optimizer. r/sr=peterv