content/xslt/src/xpath/txExpr.h
@@ -46,6 +46,7 @@
 #include "txExprResult.h"
 #include "txCore.h"
 #include "nsString.h"
+#include "nsTPtrArray.h"
 
 #ifdef DEBUG
 #define TX_TO_STRING
@@ -92,8 +93,9 @@ public:
      * Returns the type of this expression.
      */
     enum ExprType {
-        LOCATIONSTEP_ATTRIBUTE_EXPR,
-        LOCATIONSTEP_OTHER_EXPR,
+        LOCATIONSTEP_EXPR,
+        PATH_EXPR,
+        UNION_EXPR,
         OTHER_EXPR
     };
     virtual ExprType getType()
@@ -424,6 +426,7 @@ public:
      */
     enum NodeTestType {
         NAME_TEST,
+        NODETYPE_TEST,
         OTHER_TEST
     };
     virtual NodeTestType getType()
@@ -494,6 +497,13 @@ public:
      * Sets the name of the node to match. Only availible for pi nodes
      */
     void setNodeName(const nsAString& aName);
+
+    NodeType getNodeTestType()
+    {
+        return mNodeType;
+    }
+
+    NodeTestType getType();
 
     TX_DECL_NODE_TEST
 
@@ -613,12 +623,20 @@ public:
 
     txNodeTest* getNodeTest()
     {
-      return mNodeTest;
+        return mNodeTest;
     }
     void setNodeTest(txNodeTest* aNodeTest)
     {
-      mNodeTest.forget();
-      mNodeTest = aNodeTest;
+        mNodeTest.forget();
+        mNodeTest = aNodeTest;
+    }
+    LocationStepType getAxisIdentifier()
+    {
+        return mAxisIdentifier;
+    }
+    void setAxisIdentifier(LocationStepType aAxisIdentifier)
+    {
+        mAxisIdentifier = aAxisIdentifier;
     }
 
 private:
@@ -839,16 +857,6 @@ public:
     enum PathOperator { RELATIVE_OP, DESCENDANT_OP };
 
     /**
-     * Creates a new PathExpr
-    **/
-    PathExpr();
-
-    /**
-     * Destructor, will delete all Expressions
-    **/
-    virtual ~PathExpr();
-
-    /**
      * Adds the Expr to this PathExpr
      * The ownership of the given Expr is passed over the PathExpr,
      * even on failure.
@@ -857,20 +865,32 @@ public:
      */
     nsresult addExpr(Expr* aExpr, PathOperator pathOp);
 
-    TX_DECL_EXPR;
+    /**
+     * Removes and deletes the expression at the given index.
+     */
+    void deleteExprAt(PRUint32 aPos);
+
+    TX_DECL_OPTIMIZABLE_EXPR;
+
+    PathOperator getPathOpAt(PRUint32 aPos)
+    {
+        NS_ASSERTION(aPos < mItems.Length(), "getting bad pathop index");
+        return mItems[aPos].pathOp;
+    }
+    void setPathOpAt(PRUint32 aPos, PathOperator aPathOp)
+    {
+        NS_ASSERTION(aPos < mItems.Length(), "setting bad pathop index");
+        mItems[aPos].pathOp = aPathOp;
+    }
 
 private:
     class PathExprItem {
     public:
-        PathExprItem(Expr* aExpr, PathOperator aOp)
-            : expr(aExpr),
-              pathOp(aOp)
-        {}
         nsAutoPtr<Expr> expr;
         PathOperator pathOp;
     };
 
-    List expressions;
+    nsTArray<PathExprItem> mItems;
 
     /*
      * Selects from the descendants of the context node
@@ -937,7 +957,12 @@ public:
      */
     nsresult addExpr(Expr* aExpr);
 
-    TX_DECL_EXPR;
+    /**
+     * Removes and deletes the expression at the given index.
+     */
+    void deleteExprAt(PRUint32 aPos);
+
+    TX_DECL_OPTIMIZABLE_EXPR;
 
 private:
 
@@ -961,6 +986,20 @@ private:
     PRInt32 mNamespace;
     nsCOMPtr<nsIAtom> mPrefix;
     nsCOMPtr<nsIAtom> mLocalName;
+};
+
+/**
+ *
+ */
+class txUnionNodeTest : public txNodeTest
+{
+public:
+    nsresult addNodeTest(txNodeTest* aNodeTest);
+
+    TX_DECL_NODE_TEST;
+
+private:
+    nsTPtrArray<txNodeTest> mNodeTests;
 };
 
 /**
