content/xslt/src/xpath/txXPathOptimizer.cpp
@@ -66,11 +66,14 @@ txXPathOptimizer::optimize(Expr* aInExpr, Expr** aOutExpr)
 
     // Then see if current expression can be optimized
     switch (aInExpr->getType()) {
-        case Expr::LOCATIONSTEP_ATTRIBUTE_EXPR:
-            return optimizeAttributeStep(aInExpr, aOutExpr);
-
-        case Expr::LOCATIONSTEP_OTHER_EXPR:
+        case Expr::LOCATIONSTEP_EXPR:
             return optimizeStep(aInExpr, aOutExpr);
+
+        case Expr::PATH_EXPR:
+            return optimizePath(aInExpr, aOutExpr);
+
+        case Expr::UNION_EXPR:
+            return optimizeUnion(aInExpr, aOutExpr);
 
         default:
             break;
@@ -80,35 +83,26 @@ txXPathOptimizer::optimize(Expr* aInExpr, Expr** aOutExpr)
 }
 
 nsresult
-txXPathOptimizer::optimizeAttributeStep(Expr* aInExpr, Expr** aOutExpr)
-{
-    LocationStep* step = NS_STATIC_CAST(LocationStep*, aInExpr);
-
-    // Test for @foo type steps.
-    txNameTest* nameTest = nsnull;
-    if (!step->getSubExprAt(0) &&
-        step->getNodeTest()->getType() == txNameTest::NAME_TEST &&
-        (nameTest = NS_STATIC_CAST(txNameTest*, step->getNodeTest()))->
-            mLocalName != txXPathAtoms::_asterix) {
-
-        *aOutExpr = new txNamedAttributeStep(nameTest->mNamespace,
-                                             nameTest->mPrefix,
-                                             nameTest->mLocalName);
-        NS_ENSURE_TRUE(*aOutExpr, NS_ERROR_OUT_OF_MEMORY);
-
-        return NS_OK; // return since we no longer have a step-object.
-    }
-
-    // Do general step optimizations
-
-    return optimizeStep(aInExpr, aOutExpr);
-}
-
-
-nsresult
 txXPathOptimizer::optimizeStep(Expr* aInExpr, Expr** aOutExpr)
 {
     LocationStep* step = NS_STATIC_CAST(LocationStep*, aInExpr);
+
+    if (step->getAxisIdentifier() == LocationStep::ATTRIBUTE_AXIS) {
+        // Test for @foo type steps.
+        txNameTest* nameTest = nsnull;
+        if (!step->getSubExprAt(0) &&
+            step->getNodeTest()->getType() == txNameTest::NAME_TEST &&
+            (nameTest = NS_STATIC_CAST(txNameTest*, step->getNodeTest()))->
+                mLocalName != txXPathAtoms::_asterix) {
+
+            *aOutExpr = new txNamedAttributeStep(nameTest->mNamespace,
+                                                 nameTest->mPrefix,
+                                                 nameTest->mLocalName);
+            NS_ENSURE_TRUE(*aOutExpr, NS_ERROR_OUT_OF_MEMORY);
+
+            return NS_OK; // return since we no longer have a step-object.
+        }
+    }
 
     // Test for predicates that can be combined into the nodetest
     Expr* pred;
@@ -120,6 +114,136 @@ txXPathOptimizer::optimizeStep(Expr* aInExpr, Expr** aOutExpr)
 
         step->dropFirst();
         step->setNodeTest(predTest);
+    }
+
+    return NS_OK;
+}
+
+nsresult
+txXPathOptimizer::optimizePath(Expr* aInExpr, Expr** aOutExpr)
+{
+    PathExpr* path = NS_STATIC_CAST(PathExpr*, aInExpr);
+
+    PRUint32 i;
+    Expr* subExpr;
+    // look for steps like "//foo" that can be turned into "/descendant::foo"
+    // and "//." that can be turned into "/descendant-or-self::node()"
+    for (i = 0; (subExpr = path->getSubExprAt(i)); ++i) {
+        if (path->getPathOpAt(i) == PathExpr::DESCENDANT_OP &&
+            subExpr->getType() == Expr::LOCATIONSTEP_EXPR &&
+            !subExpr->getSubExprAt(0)) {
+            LocationStep* step = NS_STATIC_CAST(LocationStep*, aInExpr);
+            if (step->getAxisIdentifier() == LocationStep::CHILD_AXIS) {
+                step->setAxisIdentifier(LocationStep::DESCENDANT_AXIS);
+                path->setPathOpAt(i, PathExpr::RELATIVE_OP);
+            }
+            else if (step->getAxisIdentifier() == LocationStep::SELF_AXIS) {
+                step->setAxisIdentifier(LocationStep::DESCENDANT_OR_SELF_AXIS);
+                path->setPathOpAt(i, PathExpr::RELATIVE_OP);
+            }
+        }
+    }
+
+    // look for expressions that start with a "./"
+    subExpr = path->getSubExprAt(0);
+    LocationStep* step;
+    if (subExpr->getType() == Expr::LOCATIONSTEP_EXPR &&
+        path->getSubExprAt(1) &&
+        path->getPathOpAt(1) != PathExpr::DESCENDANT_OP) {
+        step = NS_STATIC_CAST(LocationStep*, subExpr);
+        if (step->getAxisIdentifier() == LocationStep::SELF_AXIS &&
+            !step->getSubExprAt(0)) {
+            txNodeTest* test = step->getNodeTest();
+            txNodeTypeTest* typeTest;
+            if (test->getType() == txNodeTest::NODETYPE_TEST &&
+                (typeTest = NS_STATIC_CAST(txNodeTypeTest*, test))->
+                  getNodeTestType() == txNodeTypeTest::NODE_TYPE) {
+                // We have a '.' as first step followed by a single '/'.
+
+                // Check if there are only two steps. If so, return the second
+                // as resulting expression.
+                if (!path->getSubExprAt(2)) {
+                    *aOutExpr = path->getSubExprAt(1);
+                    path->setSubExprAt(1, nsnull);
+
+                    return NS_OK;
+                }
+
+                // Just delete the '.' step and leave the rest of the PathExpr
+                path->deleteExprAt(0);
+            }
+        }
+    }
+
+    return NS_OK;
+}
+
+nsresult
+txXPathOptimizer::optimizeUnion(Expr* aInExpr, Expr** aOutExpr)
+{
+    UnionExpr* uni = NS_STATIC_CAST(UnionExpr*, aInExpr);
+
+    // Check for expressions like "foo | bar" and
+    // "descendant::foo | descendant::bar"
+
+    nsresult rv;
+    PRUint32 current;
+    Expr* subExpr;
+    for (current = 0; (subExpr = uni->getSubExprAt(current)); ++current) {
+        if (subExpr->getType() != Expr::LOCATIONSTEP_EXPR ||
+            subExpr->getSubExprAt(0)) {
+            continue;
+        }
+
+        LocationStep* currentStep = NS_STATIC_CAST(LocationStep*, subExpr);
+        LocationStep::LocationStepType axis = currentStep->getAxisIdentifier();
+
+        txUnionNodeTest* unionTest = nsnull;
+
+        // Check if there are any other steps with the same axis and merge
+        // them with currentStep
+        PRUint32 i;
+        for (i = current + 1; (subExpr = uni->getSubExprAt(i)); ++i) {
+            if (subExpr->getType() != Expr::LOCATIONSTEP_EXPR ||
+                subExpr->getSubExprAt(0)) {
+                continue;
+            }
+
+            LocationStep* step = NS_STATIC_CAST(LocationStep*, subExpr);
+            if (step->getAxisIdentifier() != axis) {
+                continue;
+            }
+            
+            // Create a txUnionNodeTest if needed
+            if (!unionTest) {
+                unionTest = new txUnionNodeTest;
+                NS_ENSURE_TRUE(unionTest, NS_ERROR_OUT_OF_MEMORY);
+                
+                rv = unionTest->addNodeTest(currentStep->getNodeTest());
+                currentStep->setNodeTest(unionTest);
+                NS_ENSURE_SUCCESS(rv, rv);
+            }
+
+            // Merge the nodetest into the union
+            rv = unionTest->addNodeTest(step->getNodeTest());
+            step->setNodeTest(nsnull);
+            NS_ENSURE_SUCCESS(rv, rv);
+
+            // Remove the step from the UnionExpr
+            uni->deleteExprAt(i);
+            --i;
+        }
+
+        // Check if all expressions were merged into a single step. If so,
+        // return the step as the new expression.
+        if (unionTest && current == 0 && !uni->getSubExprAt(1)) {
+            // Make sure the step doesn't get deleted when the UnionExpr is
+            uni->setSubExprAt(0, nsnull);
+            *aOutExpr = currentStep;
+
+            // Return right away since we no longer have a union            
+            return NS_OK;
+        }
     }
 
     return NS_OK;
